--- a/.ci/docker-compose.override.yml
+++ b/.ci/docker-compose.override.yml
@@ -5,28 +5,22 @@ services:
   logstash:
     command: /usr/share/plugins/plugin/.ci/logstash-run.sh
     environment:
-        - ELASTIC_STACK_VERSION=$ELASTIC_STACK_VERSION
-        - INTEGRATION=${INTEGRATION:-false}
-        - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
-        - ELASTIC_SECURITY_ENABLED=$ELASTIC_SECURITY_ENABLED
-        - ELASTIC_PASSWORD=$ELASTIC_PASSWORD
-        - ES_SSL_SUPPORTED_PROTOCOLS=$ES_SSL_SUPPORTED_PROTOCOLS
+      - OPENSEARCH_VERSION=$OPENSEARCH_VERSION
+      - INTEGRATION=${INTEGRATION:-false}
+      - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
+      - OPENSEARCH_SECURITY_ENABLED=$OPENSEARCH_SECURITY_ENABLED
+      - OPENSEARCH_PASSWORD=$OPENSEARCH_PASSWORD
+      - OPENSEARCH_SSL_SUPPORTED_PROTOCOLS=$OPENSEARCH_SSL_SUPPORTED_PROTOCOLS
 
-  elasticsearch:
+  opensearch:
     build:
       context: ../
-      dockerfile: .ci/Dockerfile.elasticsearch
+      dockerfile: .ci/Dockerfile.opensearch
       args:
-        - ELASTIC_STACK_VERSION=$ELASTIC_STACK_VERSION
+        - OPENSEARCH_VERSION=$OPENSEARCH_VERSION
         - INTEGRATION=${INTEGRATION:-false}
         - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
-        - ES_SSL_SUPPORTED_PROTOCOLS=$ES_SSL_SUPPORTED_PROTOCOLS
-    environment:
-      - ELASTIC_PASSWORD=$ELASTIC_PASSWORD
-      - xpack.security.enabled=${ELASTIC_SECURITY_ENABLED:-false}
-      - bootstrap.memory_lock=true
-      - discovery.type=single-node
-      - ES_JAVA_OPTS=-Xms640m -Xmx640m
+    command: /usr/share/opensearch/opensearch-run.sh
     tty: true
     ulimits:
       memlock:
@@ -34,7 +28,7 @@ services:
         hard: -1
     ports:
       - "9200:9200"
-    user: elasticsearch
+    user: opensearch
 
 
 # bundle exec rspec -fd --tag integration --tag es_version:6.8.18 spec/filters/integration
