--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ import:
 - logstash-plugins/.ci:travis/travis.yml@1.x
 
 env:
-  - INTEGRATION=false ELASTIC_STACK_VERSION=7.x
-  - INTEGRATION=false ELASTIC_STACK_VERSION=8.x
-  - INTEGRATION=false ELASTIC_STACK_VERSION=7.16.3 MANTICORE_VERSION=0.7.1 ELASTICSEARCH_VERSION=7.15.0
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
-  - INTEGRATION=true ELASTIC_STACK_VERSION=8.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.14.0 ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true LOG_LEVEL=info
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true ES_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.14.2 MANTICORE_VERSION=0.7.1 ELASTICSEARCH_VERSION=7.14.1 ELASTIC_SECURITY_ENABLED=true LOG_LEVEL=info
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=8.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true ES_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x SNAPSHOT=true LOG_LEVEL=info
-  - INTEGRATION=true ELASTIC_STACK_VERSION=8.x SNAPSHOT=true LOG_LEVEL=info
+  - INTEGRATION=false OPENSEARCH_VERSION=7.x
+  - INTEGRATION=false OPENSEARCH_VERSION=8.x
+  - INTEGRATION=false OPENSEARCH_VERSION=7.16.3 MANTICORE_VERSION=0.7.1
+  - INTEGRATION=true OPENSEARCH_VERSION=7.x
+  - INTEGRATION=true OPENSEARCH_VERSION=7.x OPENSEARCH_PASSWORD=password OPENSEARCH_SECURITY_ENABLED=true
+  - INTEGRATION=true OPENSEARCH_VERSION=8.x OPENSEARCH_PASSWORD=password OPENSEARCH_SECURITY_ENABLED=true
+  - INTEGRATION=true OPENSEARCH_VERSION=7.14.0 OPENSEARCH_PASSWORD=password OPENSEARCH_SECURITY_ENABLED=true
+  - SECURE_INTEGRATION=true INTEGRATION=true OPENSEARCH_VERSION=7.x OPENSEARCH_PASSWORD=password OPENSEARCH_SECURITY_ENABLED=true LOG_LEVEL=info
+  - SECURE_INTEGRATION=true INTEGRATION=true OPENSEARCH_VERSION=7.x OPENSEARCH_PASSWORD=password OPENSEARCH_SECURITY_ENABLED=true OPENSEARCH_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
+  - SECURE_INTEGRATION=true INTEGRATION=true OPENSEARCH_VERSION=7.14.2 MANTICORE_VERSION=0.7.1= OPENSEARCH_SECURITY_ENABLED=true LOG_LEVEL=info
+  - SECURE_INTEGRATION=true INTEGRATION=true OPENSEARCH_VERSION=8.x OPENSEARCH_PASSWORD=password OPENSEARCH_SECURITY_ENABLED=true OPENSEARCH_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
+  - INTEGRATION=true OPENSEARCH_VERSION=7.x SNAPSHOT=true LOG_LEVEL=info
+  - INTEGRATION=true OPENSEARCH_VERSION=8.x SNAPSHOT=true LOG_LEVEL=info
